[gd_scene load_steps=11 format=3 uid="uid://c1mxi56rrm2c4"]

[ext_resource type="Script" uid="uid://d2iuqmxdbt7ko" path="res://ui/hud.gd" id="1_rbyyf"]
[ext_resource type="Texture2D" uid="uid://qwci8cyvit6n" path="res://assets/textures/healthbar_over.png" id="2_1v5rv"]
[ext_resource type="Material" path="res://ui/crosshair.tres" id="2_7ihmi"]
[ext_resource type="Texture2D" uid="uid://c7b1trek5ddhb" path="res://assets/textures/pogo_under.png" id="2_srpbi"]
[ext_resource type="PackedScene" path="res://ui/pause_menu.tscn" id="3_546lt"]
[ext_resource type="Texture2D" uid="uid://b1c6nam34xb1n" path="res://assets/textures/healthbar.png" id="3_q43x7"]
[ext_resource type="Texture2D" uid="uid://cmdj4bawg1kcs" path="res://assets/textures/pogo_over.png" id="3_spcu4"]
[ext_resource type="PackedScene" uid="uid://d4baqm2niu2b0" path="res://ui/settings_menu.tscn" id="4_7ihmi"]

[sub_resource type="Gradient" id="Gradient_7ihmi"]
offsets = PackedFloat32Array(0.20588236, 1)
colors = PackedColorArray(1, 0, 0, 0, 1, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_en2x2"]
gradient = SubResource("Gradient_7ihmi")
fill = 1
fill_from = Vector2(0.5, 0.5)
metadata/_snap_enabled = true

[node name="Hud" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rbyyf")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -292.0
grow_horizontal = 0
grow_vertical = 0
fill_mode = 3
texture_under = ExtResource("2_srpbi")
texture_progress = ExtResource("3_spcu4")

[node name="HealthBar" type="TextureProgressBar" parent="."]
unique_name_in_owner = true
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -292.0
offset_right = 128.0
grow_vertical = 0
max_value = 20.0
value = 20.0
fill_mode = 3
texture_under = ExtResource("2_1v5rv")
texture_progress = ExtResource("3_q43x7")

[node name="DebugLabel1" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="DebugLabel2" type="Label" parent="."]
offset_left = 1.0
offset_top = 32.0
offset_right = 41.0
offset_bottom = 55.0

[node name="DebugLabel3" type="Label" parent="."]
offset_left = 1.0
offset_top = 63.0
offset_right = 41.0
offset_bottom = 86.0

[node name="Crosshair" type="ColorRect" parent="."]
material = ExtResource("2_7ihmi")
custom_minimum_size = Vector2(32, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HitColorRect" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_en2x2")

[node name="PauseMenu" parent="." instance=ExtResource("3_546lt")]
layer = 2
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource("4_7ihmi")]
layer = 2
visible = false

[connection signal="settings_pressed" from="PauseMenu" to="." method="_on_pause_menu_settings_pressed"]
[connection signal="settings_disabled" from="SettingsMenu" to="." method="_on_pause_menu_settings_pressed"]
